# LegalRetrievalAgent

./: .env  .gitignore  LICENSE  README.md  Start Repo.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json  setup.sh
notebooks/: 01_direct_generation_baseline.ipynb  02_agentic_retrieval_baseline.ipynb  agentic_rag.ipynb  few_shot_prompt.ipynb  retrieval_only.ipynb
output/: submission.csv
prompts/: examples.json  examples_agent.txt  system.txt  system_agent.txt
scripts/: download_data.py  download_model.py  evaluate_submission.py  hybrid_retriever.py
src/lexcite/: config.py  llm_loader.py
src/omnilex/: __init__.py
src/omnilex/citations/: __init__.py  abbreviations.py  normalizer.py  sample_data.py  types.py
src/omnilex/evaluation/: __init__.py  metrics.py  scorer.py
src/omnilex/llm/: __init__.py  loader.py  prompts.py
src/omnilex/retrieval/: __init__.py  bm25_index.py  tools.py
src/uretriever/: BM25Index.py  EmbeddingIndex.py  chat_model_loader.py  citation.py  hybride_retriever.py  metrics.py  utils.py
src/uretriever/configs/: api_config.py  path_config.py  provider_config.py
tests/: __init__.py  conftest.py
tests/test_citations/: __init__.py  test_normalizer.py
tests/test_evaluation/: __init__.py  test_metrics.py
tests/test_llm/: __init__.py  test_loader.py
utils/: abbrev-translations.json  build_indices.py  download_data.py  download_model.py  install_llama_gpu.py  validate_submission.py
