[project]
name = "omnilex-retrieval"
version = "0.1.0"
description = "Omnilex Agentic Retrieval Competition - Swiss Legal Citation Retrieval"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Omnilex Team"}
]
keywords = ["legal-nlp", "retrieval", "swiss-law", "kaggle-competition"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omnilex"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
strict = false
