[project]
name = "lexcite"
version = "0.1.0"
description = "An AI agent for generating legal citations"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Yuyan Zhao"},
    {name = "Titouan Aline"}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lexcite"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
