[project]
name = "uretriever"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Yuyan Zhao"},
    {name = "Titouan Aline"}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uretriever"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
